# onchin-bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  debug_raydium.rs  find_pda.rs  validated_pools.jsonl  validated_pools.snapshot
examples/: compare_pump_buy.rs  debug_raydium.rs  find_viable_pumpswap_meteora.rs
programs/two_hop_executor/: Cargo.toml
programs/two_hop_executor/src/: lib.rs
src/: config.rs  main.rs  market_universe.rs  rpc.rs  validated_snapshot.rs
src/executor/: config.rs  executor.rs  jito.rs  manager.rs  mod.rs  onchain.rs  swap.rs  transaction.rs
src/grpc/: client.rs  mod.rs  subscribe.rs
src/model/: mod.rs  raydium.rs  state.rs
src/parser/: meteora.rs  meteora_damm_v2.rs  mod.rs  pump.rs  pumpswap.rs  raydium.rs  raydium_clmm.rs  whirlpool.rs
src/strategy/: arb.rs  clmm.rs  detection.rs  execution.rs  mod.rs  program_pairs.rs  quote.rs  risk.rs  triangular.rs
