[package]
name = "solana_arb_bot"
version = "0.1.0"
edition = "2021"
default-run = "solana_arb_bot"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.5.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bincode = "1.3"
base64 = "0.22"
once_cell = "1.19.0"
rand = "0.8"
bytemuck = "1.19.0"

# Solana SDK
solana-sdk = "=3.0.0"
solana-client = "=3.0.0"
solana-program = "=3.0.0"
solana-system-interface = { version = "=3.0.0", features = ["bincode"] }
solana-address-lookup-table-interface = { version = "=3.1.0", features = ["serde"] }
spl-token-2022-interface = "2.1.0"
cp-amm = { git = "https://github.com/MeteoraAg/damm-v2", rev = "58a13fcf45516a9f27f2bd2a2056fb66673454e0", package = "cp-amm", features = ["no-entrypoint", "no-custom-entrypoint"] }
damm-v2-sdk = { git = "https://github.com/MeteoraAg/damm-v2", rev = "58a13fcf45516a9f27f2bd2a2056fb66673454e0", package = "rust-sdk" }
orca_whirlpools_client = { version = "7.2.0", features = ["core-types"] }
orca_whirlpools_core = { version = "2.1.0", features = ["floats", "swap"] }

# Yellowstone gRPC
yellowstone-grpc-client = "12.1.0"
yellowstone-grpc-proto = "12.1.0"
futures-util = "0.3"
tonic = "0.12"
